--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "buffer": "^4.9.1",
+    "lodash": "^4.15.0",
     "react": "15.3.1",
     "react-native": "0.32.0"
   }
